unpackaged/main/default/objects/Library_Item__c/Library_Item__c.object-meta.xml
<CustomObject>
    <description>This would be used to maintains Books/Magazines/NewsPapers</description>
    <label>Library Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>