unpackaged/main/default/objects/Library_Item__c/fields/Avg_Rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_Rating__c</fullName>
    <label>Avg Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>