unpackaged/main/default/objects/Library_Item__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>