unpackaged/main/default/objects/Library_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Programming Languages</fullName>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Movies</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>