unpackaged/main/default/objects/Library_Item__c/fields/Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>Cover_Image__c</fullName>
    <label>Cover image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>