unpackaged/main/default/objects/Library_Item__c/fields/ISBN_No__c.field-meta.xml
<CustomField>
    <fullName>ISBN_No__c</fullName>
    <externalId>true</externalId>
    <label>ISBN No.</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>