unpackaged/main/default/objects/Library_Item__c/fields/Ratings__c.field-meta.xml
<CustomField>
    <fullName>Ratings__c</fullName>
    <formula>IMAGE(
IF((Avg_Rating__c) = 0, &quot;/img/samples/stars_000.gif&quot;,
IF((Avg_Rating__c) = 1, &quot;/img/samples/stars_100.gif&quot;,
IF((Avg_Rating__c) = 2, &quot;/img/samples/stars_200.gif&quot;,
IF((Avg_Rating__c) = 3, &quot;/img/samples/stars_300.gif&quot;,
IF((Avg_Rating__c) = 4, &quot;/img/samples/stars_400.gif&quot;,
IF((Avg_Rating__c) = 5, &quot;/img/samples/stars_500.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;
)))))),
&#39;Rating Level&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratings</label>
    <type>Text</type>
</CustomField>