unpackaged/main/default/objects/Library_Item__c/fields/Ratings_Count__c.field-meta.xml
<CustomField>
    <fullName>Ratings_Count__c</fullName>
    <description>used to count Ratings</description>
    <label>Ratings Count</label>
    <summaryForeignKey>Library_Item_Rating__c.Library_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>