unpackaged/main/default/objects/Library_Item__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>This would be used to store General Information</description>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>