unpackaged/main/default/objects/Library_Item__c/fields/Total_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Available__c</fullName>
    <formula>Total_Copies__c -   (Total_Issued__c- Total_Returned__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>