unpackaged/main/default/objects/Library_Item__c/fields/Total_Issued__c.field-meta.xml
<CustomField>
    <fullName>Total_Issued__c</fullName>
    <label>Total Issued</label>
    <summaryFilterItems>
        <field>Library_Issue_Ret_Item__c.is_Issued__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Library_Issue_Ret_Item__c.Library_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>