unpackaged/main/default/objects/Library_Item__c/fields/Total_Lost__c.field-meta.xml
<CustomField>
    <fullName>Total_Lost__c</fullName>
    <label>Total Lost</label>
    <summaryFilterItems>
        <field>Library_Issue_Ret_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Library_Issue_Ret_Item__c.Library_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>