unpackaged/main/default/objects/Library_Item__c/fields/Total_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Total_Ratings__c</fullName>
    <label>Total Ratings</label>
    <summarizedField>Library_Item_Rating__c.RatingNumber__c</summarizedField>
    <summaryForeignKey>Library_Item_Rating__c.Library_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>