unpackaged/main/default/objects/Library_Item__c/fields/Total_Returned__c.field-meta.xml
<CustomField>
    <fullName>Total_Returned__c</fullName>
    <description>This would be used to check the Returned items</description>
    <label>Total Returned</label>
    <summaryFilterItems>
        <field>Library_Issue_Ret_Item__c.is_Returned__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Library_Issue_Ret_Item__c.Library_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>