unpackaged/main/default/objects/Library_Item__c/recordTypes/AV.recordType-meta.xml
<RecordType>
    <fullName>AV</fullName>
    <active>true</active>
    <description>CD/DVD</description>
    <label>AV</label>
</RecordType>