unpackaged/main/default/objects/Library_Item__c/recordTypes/Book.recordType-meta.xml
<RecordType>
    <fullName>Book</fullName>
    <active>true</active>
    <description>This is for Book type Items</description>
    <label>Book</label>
</RecordType>