unpackaged/main/default/objects/Library_Item__c/recordTypes/Magazine.recordType-meta.xml
<RecordType>
    <fullName>Magazine</fullName>
    <active>true</active>
    <description>This is used for Issue Magazine</description>
    <label>Magazine</label>
</RecordType>