unpackaged/main/default/objects/Library_Item__c/validationRules/Publshng_Date_cannot_be_lesser_thn_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Publshng_Date_cannot_be_lesser_thn_Today</fullName>
    <active>true</active>
    <errorConditionFormula>Publishing_Date__c &gt;Today()</errorConditionFormula>
    <errorDisplayField>Publishing_Date__c</errorDisplayField>
    <errorMessage>Publishing Date cannot be after today&#39;s date</errorMessage>
</ValidationRule>