unpackaged/main/default/objects/Library_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Capacity__c</columns>
    <columns>Category__c</columns>
    <columns>ISBN_No__c</columns>
    <columns>Item_Price__c</columns>
    <columns>Publisher__c</columns>
    <columns>Publishing_Date__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>