unpackaged/main/default/objects/Library_Item__c/listViews/Most_Rated.listView-meta.xml
<ListView>
    <fullName>Most_Rated</fullName>
    <columns>NAME</columns>
    <columns>Ratings__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Publishing_Date__c</columns>
    <columns>Total_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Avg_Rating__c</field>
        <operation>greaterThan</operation>
        <value>3</value>
    </filters>
    <label>Most Rated</label>
</ListView>